@@ -748,6 +748,7 @@ P['unitframe'] = {
 				['text_format'] = 'current-percent',
 				['position'] = 'RIGHT',
 				['orientation'] = 'HORIZONTAL',
+				['frequentUpdates'] = false,
 			},
 			['power'] = {
 				['enable'] = true,
@@ -843,6 +844,7 @@ P['unitframe'] = {
 				['text_format'] = 'deficit',
 				['position'] = 'BOTTOM',
 				['orientation'] = 'HORIZONTAL',
+				['frequentUpdates'] = false,
 			},
 			['power'] = {
 				['enable'] = true,
@@ -925,6 +927,7 @@ P['unitframe'] = {
 				['text_format'] = 'deficit',
 				['position'] = 'BOTTOM',
 				['orientation'] = 'HORIZONTAL',
+				['frequentUpdates'] = false,
 			},
 			['power'] = {
 				['enable'] = false,
