@@ -690,3 +690,5 @@ L["This is completely optional."] = true;
 L["You may need to further alter these settings depending how low you resolution is."] = true;
 L["Resolution Style Set"] = true;
 L['Layout Set'] = true;
+L['Frequent Updates'] = true;
+L['Rapidly update the health, uses more memory and cpu. Only recommended for healing.'] = true;
