@@ -13,9 +13,10 @@ function UF:Construct_Raid625Frames(unitGroup)
 	self.menu = UF.SpawnMenu
 
 	self.Health = UF:Construct_HealthBar(self, true, true, 'RIGHT')
-	self.Health.frequentUpdates = true;
 	
 	self.Power = UF:Construct_PowerBar(self, true, true, 'LEFT', false)
+	self.Power.frequentUpdates = false;
+	
 	self.Name = UF:Construct_NameText(self)
 	self.Buffs = UF:Construct_Buffs(self)
 	self.Debuffs = UF:Construct_Debuffs(self)
@@ -160,7 +161,8 @@ function UF:Update_Raid625Frames(frame, db)
 	do
 		local health = frame.Health
 		health.Smooth = self.db.smoothbars
-
+		health.frequentUpdates = db.health.frequentUpdates
+		
 		--Text
 		if db.health.text then
 			health.value:Show()
